@@ -30,8 +30,16 @@ Minor features
 
 * Use reversed() in manager/command.py instead of .__reversed__().
 
-* DecimalStringCol - similar to DecimalCol but stores data as strings to
-  work around problems in some drivers and type affinity problem in SQLite.
+* Added DecimalStringCol - similar to DecimalCol but stores data as strings
+  to work around problems in some drivers and type affinity problem in
+  SQLite.
+
+* Added sqlobject.include.hascol.HashCol - a column type that automatically
+  hashes anything going into it, and returns out an object that hashes
+  anything being compared to itself. Basically, it's good for really simple
+  one-way password fields, and it even supports the assignment of None to
+  indicate no password set. By default, it uses the md5 library for
+  hashing, but this can be changed in a HashCol definition.
 
 SQLObject 0.10.3
 ================
